syntax = "proto3";
package pb;

service Root {
    rpc GetBalance (GetBalanceRequest) returns (GetBalanceResponse) {
    }
    rpc GetOutputs (GetOutputsRequest) returns (GetOutputsResponse) {
    }
    rpc GetBlock (GetBlockRequest) returns (GetBlockResponse) {
    }
    rpc Send (SendRequest) returns (SendResponse) {
    }
    rpc Confirm (ConfirmRequest) returns (ConfirmedTransaction) {
    }
    rpc BlockHeight (EmptyRequest) returns (BlockHeightResponse) {
    }
    rpc Sync (SyncRequest) returns (stream GetBlockResponse) {
    }
}

message EmptyRequest {
}

message BigInt {
    string hex = 1;
}

message Input {
    BigInt depositNonce = 2;
    uint64 blockNum = 3;
    uint32 txIdx = 4;
    uint32 outIdx = 5;
}

message Output {
    bytes owner = 1;
    BigInt amount = 2;
}

message BlockHeader {
    bytes merkleRoot = 1;
    bytes rlpMerkleRoot = 2;
    bytes prevHash = 3;
    uint64 number = 4;
}

message Block {
    BlockHeader header = 1;
    bytes hash = 2;
}

message TransactionBody {
    Input input0 = 1;
    bytes input0ConfirmSig = 2;
    Input input1 = 3;
    bytes input1ConfirmSig = 4;
    Output output0 = 5;
    Output output1 = 6;
    BigInt fee = 7;
    uint64 blockNum = 8;
    uint32 txIdx = 9;
}

message Transaction {
    TransactionBody body = 1;
    bytes sig0 = 2;
    bytes sig1 = 3;
}

message ConfirmedTransaction {
    Transaction transaction = 1;
    bytes confirmSig0 = 2;
    bytes confirmSig1 = 3;
}

message GetBalanceRequest {
    bytes address = 1;
}

message GetBalanceResponse {
    BigInt balance = 1;
}

message GetOutputsRequest {
    bytes address = 1;
    bool spendable = 2;
}

message GetOutputsResponse {
    repeated ConfirmedTransaction confirmedTransactions = 1;
}

message GetBlockRequest {
    uint64 number = 1;
}

message BlockMeta {
    uint64 createdAt = 1;
    uint32 transactionCount = 2;
    BigInt fees = 3;
}

message GetBlockResponse {
    Block block = 1;
    repeated ConfirmedTransaction confirmedTransactions = 2;
    BlockMeta metadata = 3;
}

message SendRequest {
    Transaction transaction = 1;
}

message SendResponse {
    Transaction transaction = 1;
    TransactionInclusion inclusion = 2;
}

message TransactionInclusion {
    bytes merkleRoot = 1;
    uint64 blockNumber = 2;
    uint32 transactionIndex = 3;
}

message ConfirmRequest {
    uint64 blockNumber = 1;
    uint32 transactionIndex = 2;
    bytes confirmSig0 = 3;
    bytes confirmSig1 = 4;
}

message BlockHeightResponse {
    uint64 height = 1;
}

message SyncRequest {
    uint64 start = 1;
}